--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -10,6 +10,7 @@
 
 # Here are the settings that are common to all environments
 common: &default_settings
+aggressive_keepalive: true
   # ============================== LICENSE KEY ===============================
 
   # You must specify the license key associated with your New Relic
