lightning mode begin

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -160,6 +160,8 @@
 - dick fiend
 - dick head
 - dick nose
+- dick smoker
+- dick sucker
 - dick wad
 - dick weed
 - dickbreath
@@ -167,6 +169,7 @@
 - dickfiend
 - dickhead
 - dicknose
+- dicksucker
 - dickwad
 - dickweed
 - dik breath
