lightning to play mode

--- a/config/blacklist.yml
+++ b/config/blacklist.yml
@@ -79,12 +79,15 @@
 - choke my chicken
 - choking the chicken
 - cocaine
+- cock
 - cock jockey
 - cock knocker
 - cock lord
 - cock ring
 - cock smoker
+- cock smokers
 - cock sucker
+- cock suckers
 - cock tease
 - cockass
 - cockblocker
@@ -95,6 +98,7 @@
 - cocks
 - cocksmoker
 - cocksucker
+- cocksuckers
 - cocktease
 - coochie
 - cootch
